--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.30", features = ["derive"] }
+pnet = "0.35.0"
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
